--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-	<link rel="stylesheet" type="text/css" href="css/resume.css" />
+	<link rel="stylesheet" type="text/css" href="../css/resume.css" />
 		<title>Alan Mooiman's Projects</title>
 	</head>
 	<body>
