Added high school, references

--- a/resume/index.html
+++ b/resume/index.html
@@ -14,7 +14,7 @@
 		</div> <!-- .name_title -->
 		<div class="contact_info">
 			<!--<span class="phone">908-867-8677</span>--><!--If you know enough to look in comments, you can have my phone number. But I'm tired of recruiter agency calls. That's my Google Voice number.-->
-			<span class="email"><a href="mailto:alan@alanmooiman.com?subject=I want to pay you">alan@alanmooiman.com</a></span>
+			<a class="email" href="mailto:alan@alanmooiman.com?subject=I want to pay you">alan@alanmooiman.com</a>
 		</div> <!-- .contact_info -->
 		<div class="content">
 			<h3>Objective</h3>
@@ -72,6 +72,16 @@
 			<ul>
 			<li>Communications Major with a concentration in Design and Interactive Media, summa cum laude,  May 2010</li>
 			<li>Minor in Computer Science</li>
+			</ul>
+			<h3 class="resume_item"><span>Middlesex County Academy for Science, Mathematics and Engineering Technology</span><span class="location">Edison, NJ</span></h3>
+			<ul>
+				<li>4 years of Electrical and Computer Engineering</li>
+				<li>Graduated Salutatorian</li>
+			</ul>
+
+			<h2>References</h2>
+			<ul>
+				<li>Available upon <a href="mailto:alan@alanmooiman.com?subject=References?">request</a></li>
 			</ul>
 		</div> <!-- .content -->
 <script type="text/javascript">
