--- a/resume/index.html
+++ b/resume/index.html
@@ -35,45 +35,69 @@
 				<li>AngularJS (intermediate skillset)</li>
 			</ul>
 			<h2>Work Experience</h2>
-			<h3 class="resume_item"><span class="job_title">UI Designer/Developer</span><span class="organization">Weill Cornell Medical College, New York</span><span class="organization_dates">February 2012 - Present</span></h3>
-			<ul>
-				<li>Develop responsive Drupal theme for new base distribution, including a new responsive navigation pattern</li>
-				<li>Add front end functionality to existing internal applications</li>
-				<li>Skin various internal and 3rd party web applications</li>
-				<li>Write CSS with support back to IE7 and Firefox 3.6</li>
-				<li>Develop coding standards for the web design team</li>
-				<li>Play a strong role in the design process with guidance from art director</li>
-				<li>Implement designs by others in code to a high level of detail</li>
-				<li>Comment code so that future developers understand it</li>
-			</ul>
-			<h3 class="resume_item"><span class="job_title">Desktop Support Assistant</span><span class="organization">Weill Cornell Medical College, New York</span><span class="organization_dates">March 2011-February 2012</span></h3>
-			<ul>
-				<li>Imaged new computers, added device information to asset management system</li>
-				<li>Balanced workload of assigned connect cases and took support cases according to ability</li>
-				<li>Documented all work performed</li>
-			</ul>
-			<h3 class="resume_item"><span class="job_title">Specialist/Creative</span><span class="organization">Apple; Edison, NJ</span><span class="organization_dates">2006-2011</span></h3>
-			<ul>
-				<li>Trained customers on a range of Apple hardware and software, from basic OS to Final Cut Pro and Motion</li>
-				<li>Troubleshot, diagnosed, and repaired customer iPods and iPhones at Genius Bar</li>
-			</ul>
-			<h3 class="resume_item"><span class="job_title">Design Intern</span><span class="organization">Longtail Video; New York</span><span class="organization_dates">Summer 2009</span></h3>
-			<ul>
-				<li>Unified CSS for a set of web pages to reduce amount of files needed</li>
-				<li>Hand coded HTML e-mail blasts</li>
-			</ul>
-			<h3 class="resume_item"><span class="job_title">Visual Coordinator</span><span class="organization">Apple; Woodcliff Lake, NJ</span><span class="organization_dates">Summer-Fall 2007</span></h3>
-			<ul>
-				<li>Adhered to meticulous visual guidelines managing store aesthetics</li>
-			</ul>
+			<div class="resume_item">
+				<h3 class="job_title">UI Designer/Developer</h3>
+				<div class="organization">Weill Cornell Medical College, <span class="location">New York</span></div>
+				<div class="organization_dates">February 2012 - Present</div>
+				<ul>
+					<li>Develop responsive Drupal theme for new base distribution, including a new responsive navigation pattern</li>
+					<li>Add front end functionality to existing internal applications</li>
+					<li>Skin various internal and 3rd party web applications</li>
+					<li>Write CSS with support back to IE7 and Firefox 3.6</li>
+					<li>Develop coding standards for the web design team</li>
+					<li>Play a strong role in the design process with guidance from art director</li>
+					<li>Implement designs by others in code to a high level of detail</li>
+					<li>Comment code so that future developers understand it</li>
+				</ul>
+			</div>
+			<div class="resume_item">
+				<h3 class="job_title">Desktop Support Assistant</h3>
+				<div class="organization">Weill Cornell Medical College - <span class="location">Manhattan</span></div>
+				<div class="organization_dates">March 2011-February 2012</div>
+				<ul>
+					<li>Imaged new computers, added device information to asset management system</li>
+					<li>Balanced workload of assigned connect cases and took support cases according to ability</li>
+					<li>Documented all work performed</li>
+				</ul>
+			<div class="resume_item">
+				<h3 class="job_title">Specialist/Creative</h3>
+				<div class="organization">Apple - <span class="location">Edison, NJ</span></div>
+				<div class="organization_dates">2006-2011</div>
+				<ul>
+					<li>Trained customers on a range of Apple hardware and software, from basic OS to Final Cut Pro and Motion</li>
+					<li>Troubleshot, diagnosed, and repaired customer iPods and iPhones at Genius Bar</li>
+				</ul>
+			<div class="resume_item">
+				<h3 class="job_title">Design Intern</h3>
+				<div class="organization">Longtail Video - <span class="location">New York</span></div>
+				<div class="organization_dates">Summer 2009</div>
+				<ul>
+					<li>Unified CSS for a set of web pages to reduce amount of files needed</li>
+					<li>Hand coded HTML e-mail blasts</li>
+				</ul>
+			<div class="resume_item">
+				<h3 class="job_title">Visual Coordinator</h3>
+				<div class="organization">Apple - <span class="location">Woodcliff Lake NJ</span></div>
+				<div class="organization_dates">Summer-Fall 2007</div>
+				<ul>
+					<li>Adhered to meticulous visual guidelines managing store aesthetics</li>
+				</ul>
 			
 			<h2>Education</h2>
-			<h3 class="resume_item"><span>Ramapo College of New Jersey</span><span class="location">Mahwah, NJ</span></h3>
+			<div class="resume_item">
+				<div class="organization">
+					<h3>Ramapo College of New Jersey</h3>
+					<span class="location">Mahwah, NJ</span>
+				</div>
 			<ul>
 			<li>Communications Major with a concentration in Design and Interactive Media, summa cum laude,  May 2010</li>
 			<li>Minor in Computer Science</li>
 			</ul>
-			<h3 class="resume_item"><span>Middlesex County Academy for Science, Mathematics and Engineering Technology</span><span class="location">Edison, NJ</span></h3>
+			<div class="resume_item">
+				<div class="organization">
+					<h3>Middlesex County Academy for Science, Mathematics and Engineering Technology</h3>
+					<span class="location">Edison, NJ</span>
+				</div>
 			<ul>
 				<li>4 years of Electrical and Computer Engineering</li>
 				<li>Graduated Salutatorian</li>
