--- a/projects/index.html
+++ b/projects/index.html
@@ -20,7 +20,7 @@
 		<div class="project">
 			<h3>Telecommute Project</h3>
 			<p><em>Please note this project is under active development. It's in a pre-alpha stage right now with no backend functionality. Forgive its ugliness.</em></p>
-			<p>This is a project that I'm building in AngularJS for a 10% time project/competition at my company. Take a look at the code and requirements <a href="https://bitbucket.org/amooiman/team-mayo-telecommute">on bitbucket</a>. A demo of the project is hosted <a href="telecommute">here</a></p>
+			<p>This is a project that I'm building in AngularJS for a 10% time project/competition at my company. Take a look at the code and requirements <a href="https://bitbucket.org/amooiman/team-mayo-telecommute">on bitbucket</a>. A demo of the project is hosted <a href="telecommute/app">here</a></p>
 		</div>
 		<div class="project">
 			<h3>Mobile retrofitting</h3>
