--- a/projects/index.html
+++ b/projects/index.html
@@ -12,24 +12,24 @@
 		<div class="project">
 			<h3>Drupal Theme</h3>
 			<p>This is a responsive theme for my company's base Drupal Distrobution. It uses jQuery for DOM manipulation and was built using Sass to modualrize the styles. I wrote with the design team in mind- they will be building various sites based off this theme, and they have a theme file that includes the relevant styles that they can override easily, along with a set of color variables to make their jobs easier.</p>
-			<div><a href="https://bitbucket.org/alanmoo/wcmc-base-theme">Source</a></div>
-			<div><a href="http://dev-wcmcbase.gotpantheon.com/dinosaurs/meat-eaters/allosaurus">Base theme</a>(this may take a moment to load, as it's on a development server that spins down)
+			<div><a target="_blank" href="https://bitbucket.org/alanmoo/wcmc-base-theme">Source</a></div>
+			<div><a target="_blank" href="http://dev-wcmcbase.gotpantheon.com/dinosaurs/meat-eaters/allosaurus">Base theme</a>(this may take a moment to load, as it's on a development server that spins down)
 			</div>
-			<div><a href="http://dev-rad-onc.gotpantheon.com">Theme in use</a>(still in development)</div>
+			<div><a target="_blank" href="http://dev-rad-onc.gotpantheon.com">Theme in use</a>(still in development)</div>
 		</div>
 		<div class="project">
 			<h3>Telecommute Project</h3>
 			<p><em>Please note this project is under active development. It's in a pre-alpha stage right now with no backend functionality. Forgive its ugliness.</em></p>
-			<p>This is a project that I'm building in AngularJS for a 10% time project/competition at my company. Take a look at the code and requirements <a href="https://bitbucket.org/amooiman/team-mayo-telecommute">on bitbucket</a>. A demo of the project is hosted <a href="telecommute/app">here</a></p>
+			<p>This is a project that I'm building in AngularJS for a 10% time project/competition at my company. Take a look at the code and requirements <a target="_blank" href="https://bitbucket.org/amooiman/team-mayo-telecommute">on bitbucket</a>. A demo of the project is hosted <a target="_blank" href="telecommute/app">here</a></p>
 		</div>
 		<div class="project">
 			<h3>Mobile retrofitting</h3>
 			<p>During another 10% time project I added media queries to our physician profiles so that users on mobile devices that support media queries can more easily view the profiles.</p>
-			<p><a href="http://weillcornell.org/physician/clcole/index.html">Example profile</a></p>
+			<p><a target="_blank" href="http://weillcornell.org/physician/clcole/index.html">Example profile</a></p>
 		</div>
 		<div class="project">
 			<h3>Wordpress</h3>
-			<p>Oh hey, I can figure out Wordpress. And how to integrate a few plugins and <em>slightly</em> change the theme. <a href="http://edificenyc.com">Nothing impressive, but here you go.</a></p>
+			<p>Oh hey, I can figure out Wordpress. And how to integrate a few plugins and <em>slightly</em> change the theme. <a target="_blank" href="http://edificenyc.com">Nothing impressive, but here you go.</a></p>
 		</div>
 	</div> <!-- .content -->
 <script type="text/javascript">
