Fix location inconsistencies

--- a/resume/index.html
+++ b/resume/index.html
@@ -37,7 +37,7 @@
 			<h2>Work Experience</h2>
 			<div class="resume_item">
 				<h3 class="job_title">UI Designer/Developer</h3>
-				<div class="organization">Weill Cornell Medical College, <span class="location">New York</span></div>
+				<div class="organization">Weill Cornell Medical College - <span class="location">New York City</span></div>
 				<div class="organization_dates">February 2012 - Present</div>
 				<ul>
 					<li>Develop responsive Drupal theme for new base distribution, including a new responsive navigation pattern</li>
@@ -52,7 +52,7 @@
 			</div>
 			<div class="resume_item">
 				<h3 class="job_title">Desktop Support Assistant</h3>
-				<div class="organization">Weill Cornell Medical College - <span class="location">Manhattan</span></div>
+				<div class="organization">Weill Cornell Medical College - <span class="location">New York City</span></div>
 				<div class="organization_dates">March 2011-February 2012</div>
 				<ul>
 					<li>Imaged new computers, added device information to asset management system</li>
@@ -69,7 +69,7 @@
 				</ul>
 			<div class="resume_item">
 				<h3 class="job_title">Design Intern</h3>
-				<div class="organization">Longtail Video - <span class="location">New York</span></div>
+				<div class="organization">Longtail Video - <span class="location">New York City</span></div>
 				<div class="organization_dates">Summer 2009</div>
 				<ul>
 					<li>Unified CSS for a set of web pages to reduce amount of files needed</li>
