--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
 	<div class="content">
 		<div class="project">
 			<h3>Drupal Theme</h3>
-			<p>This is a responsive theme for my company's base Drupal Distrobution. It uses jQuery for DOM manipulation and was built using Sass to modualrize the styles. I wrote with the design team in mind- they will be building various sites based off this theme, and they have a theme file that includes the relevant styles that they can override easily, along with a set of color variables to make their jobs easier.</p>
+			<p>This is a responsive theme for my company's base Drupal distribution. It uses jQuery for DOM manipulation and was built using Sass to modualrize the styles. I wrote with the design team in mind- they will be building various sites based off this theme, and they have a theme file that includes the relevant styles that they can override easily, along with a set of color variables to make their jobs easier.</p>
 			<div><a target="_blank" href="https://bitbucket.org/alanmoo/wcmc-base-theme">Source</a>(not actual repo, may be off sync from link below</div>
 			<div><a target="_blank" href="http://dev-distrodev.gotpantheon.com/dinosaurs/meat-eaters/allosaurus">Base theme</a>(this may take a moment to load, as it's on a development server that spins down)
 			</div>
