Updates based on new experience, remove oldest resume entry.

--- a/resume/index.html
+++ b/resume/index.html
@@ -22,23 +22,33 @@
 			<h3>Skills/Knowledge</h3>
 			<ul class="skills">
 				<li>Ability to handle and prioritize many tasks at once</li>
-				<li>Front end skill set: HTML5, CSS, jQuery</li>
+				<li>Front end skill set: HTML5, CSS, Javascript</li>
+				<li>AngularJS</li>
 				<li>Drupal theming/templating</li>
 				<li>Mobile first, responsive web development</li>
-				<li>Focus on building sites using code instead of images wherever possible</li>
 				<li>Sass preprocessing</li>
+				<li>Interaction Design</li>
+				<li>Focus on building sites using code instead of images wherever possible</li>
 				<li>Familiarity with PHP, especially debugging/modifying existing code</li>
 				<li>Templating in Symfony/Twig</li>
 				<li>Firm believer in progressive enhancement</li>
-				<li>Not afraid of the command line</li>
-				<li>A thirst for knowledge</li>
-				<li>AngularJS (intermediate skillset)</li>
 			</ul>
 			<h2>Work Experience</h2>
 			<div class="resume_item">
+				<h3 class="job_title">Front End Prototype Developer</h3>
+				<div class="organization">E*TRADE Financial<span class="location">New York City</span></div>
+				<div class="organization_dates">October 2013 - Present</div>
+				<ul>
+					<li>Develop prototypes for the customer webapp based on static comps</li>
+					<li>Experiment with new web technologies to implement within the application</li>
+					<li>Coordinate with the development team in California so that our prototypes are useful to them during production</li>
+					<li>Develop framework of various components to be integrated into a style guide for agencies and developers to reference.</li>
+				</ul>
+			</div>
+			<div class="resume_item">
 				<h3 class="job_title">UI Designer/Developer</h3>
 				<div class="organization">Weill Cornell Medical College - <span class="location">New York City</span></div>
-				<div class="organization_dates">February 2012 - Present</div>
+				<div class="organization_dates">February 2012 - October 2013</div>
 				<ul>
 					<li>Develop responsive Drupal theme for new base distribution, including a new responsive navigation pattern</li>
 					<li>Add front end functionality to existing internal applications</li>
@@ -59,6 +69,7 @@
 					<li>Balanced workload of assigned connect cases and took support cases according to ability</li>
 					<li>Documented all work performed</li>
 				</ul>
+			</div>
 			<div class="resume_item">
 				<h3 class="job_title">Specialist/Creative</h3>
 				<div class="organization">Apple - <span class="location">Edison, NJ</span></div>
@@ -67,6 +78,7 @@
 					<li>Trained customers on a range of Apple hardware and software, from basic OS to Final Cut Pro and Motion</li>
 					<li>Troubleshot, diagnosed, and repaired customer iPods and iPhones at Genius Bar</li>
 				</ul>
+			</div>
 			<div class="resume_item">
 				<h3 class="job_title">Design Intern</h3>
 				<div class="organization">Longtail Video - <span class="location">New York City</span></div>
@@ -75,24 +87,18 @@
 					<li>Unified CSS for a set of web pages to reduce amount of files needed</li>
 					<li>Hand coded HTML e-mail blasts</li>
 				</ul>
-			<div class="resume_item">
-				<h3 class="job_title">Visual Coordinator</h3>
-				<div class="organization">Apple - <span class="location">Woodcliff Lake NJ</span></div>
-				<div class="organization_dates">Summer-Fall 2007</div>
-				<ul>
-					<li>Adhered to meticulous visual guidelines managing store aesthetics</li>
-				</ul>
-			
+			</div>
 			<h2>Education</h2>
 			<div class="resume_item">
 				<div class="organization">
 					<h3>Ramapo College of New Jersey</h3>
 					<span class="location">Mahwah, NJ</span>
 				</div>
-			<ul>
-			<li>Communications Major with a concentration in Design and Interactive Media, summa cum laude,  May 2010</li>
-			<li>Minor in Computer Science</li>
-			</ul>
+				<ul>
+					<li>Communications Major with a concentration in Design and Interactive Media, summa cum laude,  May 2010</li>
+					<li>Minor in Computer Science</li>
+				</ul>
+			</div>
 			<div class="resume_item">
 				<div class="organization">
 					<h3>Middlesex County Academy for Science, Mathematics and Engineering Technology</h3>
@@ -102,6 +108,7 @@
 				<li>4 years of Electrical and Computer Engineering</li>
 				<li>Graduated Salutatorian</li>
 			</ul>
+			</div>
 
 			<h2>References</h2>
 			<ul>
