--- a/projects/index.html
+++ b/projects/index.html
@@ -11,16 +11,16 @@
 	<div class="content">
 		<div class="project">
 			<h3>Drupal Theme</h3>
-			<p>This is a responsive theme for my company's base Drupal distribution. It uses jQuery for DOM manipulation and was built using Sass to modualrize the styles. I wrote with the design team in mind- they will be building various sites based off this theme, and they have a theme file that includes the relevant styles that they can override easily, along with a set of color variables to make their jobs easier.</p>
-			<div><a target="_blank" href="https://bitbucket.org/alanmoo/wcmc-base-theme">Source</a>(not actual repo, may be off sync from link below</div>
-			<div><a target="_blank" href="http://dev-distrodev.gotpantheon.com/dinosaurs/meat-eaters/allosaurus">Base theme</a>(this may take a moment to load, as it's on a development server that spins down)
+			<p>While working at Weill Cornell, I built a responsive theme for our base Drupal distribution. It uses jQuery for DOM manipulation and was built using Sass to modualrize the styles. I wrote with the design team in mind- they will be building various sites based off this theme, and they have a theme file that includes the relevant styles that they can override easily, along with a set of color variables to make their jobs easier.</p>
+			<div>The theme has been applied to <a target="_blank" href="http://cornellradiationoncology.org">Radation Oncology</a>, <a target="_blank" href="http://weillcornellpainmedicine.com">Pain Medicine</a>, and <a href="http://weillcornellanesthesiology.org" target="_blank">Anesthesiology</div>
+			<div>
+				<a target="_blank" href="https://bitbucket.org/alanmoo/wcmc-base-theme">Source</a>
 			</div>
-			<div><a target="_blank" href="http://dev-rad-onc.gotpantheon.com">Theme in use</a>(still in development)</div>
 		</div>
 		<div class="project">
 			<h3>Telecommute Project</h3>
-			<p><em>Please note this project is under active development. It's in a pre-alpha stage right now with no backend functionality. Forgive its ugliness.</em></p>
-			<p>This is a project that I'm building in AngularJS for a 10% time project/competition at my company. Take a look at the code and requirements <a target="_blank" href="https://bitbucket.org/amooiman/team-mayo-telecommute">on bitbucket</a>. A demo of the project is hosted <a target="_blank" href="telecommute/app">here</a></p>
+			<p><em>Please note this project was a proof of concept, focused on functionality over looks.</em></p>
+			<p>This is a project that I built in AngularJS for a 10% time project/competition at my previous emplloyer. Take a look at the code and requirements <a target="_blank" href="https://bitbucket.org/amooiman/team-mayo-telecommute">on bitbucket</a>. A demo of the project is hosted <a target="_blank" href="telecommute/app">here</a>. Note that it's somewhat responsive.</p>
 		</div>
 		<div class="project">
 			<h3>Mobile retrofitting</h3>
