--- a/resume/index.html
+++ b/resume/index.html
@@ -36,7 +36,7 @@
 			<h2>Work Experience</h2>
 			<div class="resume_item">
 				<h3 class="job_title">Front End Prototype Developer</h3>
-				<div class="organization">E*TRADE Financial<span class="location">New York City</span></div>
+				<div class="organization">E*TRADE Financial - <span class="location">New York City</span></div>
 				<div class="organization_dates">October 2013 - Present</div>
 				<ul>
 					<li>Develop prototypes for the customer webapp based on static comps</li>
