Updates to skills and links

--- a/resume/index.html
+++ b/resume/index.html
@@ -19,10 +19,10 @@
 		<div class="content">
 			<h3>Objective</h3>
 			<p>To build semantic, responsive, and fast web sites and applications using modern web technologies, and to be proud of what I create.</p>
-			<h3>Skills/Knowledge</h3>
+			<h3>Skills/Approaches</h3>
 			<ul class="skills">
-				<li>Ability to handle and prioritize many tasks at once</li>
 				<li>Front end skill set: HTML5, CSS, Javascript</li>
+				<li>Modern workflow: Grunt, Bower, Yeoman</li>
 				<li>AngularJS</li>
 				<li>Drupal theming/templating</li>
 				<li>Mobile first, responsive web development</li>
@@ -31,7 +31,9 @@
 				<li>Focus on building sites using code instead of images wherever possible</li>
 				<li>Familiarity with PHP, especially debugging/modifying existing code</li>
 				<li>Templating in Symfony/Twig</li>
-				<li>Firm believer in progressive enhancement</li>
+				<li>Firm believer in progressive enhancement and building modular code</li>
+				<li>Some experience with D3.js</li>
+				<li><!--Trollin' recruiters--><a href="http://html9responsiveboilerstrapjs.com" style="text-decoration: none">HTML6 ready</a></li>
 			</ul>
 			<h2>Work Experience</h2>
 			<div class="resume_item">
@@ -127,6 +129,9 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
+</script>
+<script>
+console.log("Well, Hello. If you've found this and would like to give me a call, check the comments on this page. Just keep in mind I'm probably not looking for a full time gig. But if you're working on something awseome that I could moonlight on, get in touch. E-mail is probably best, though.");
 </script>
 	</body>
 </html>
