--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
 	<div class="content">
 		<div class="project">
 			<h3>Drupal Theme</h3>
-			<p>While working at Weill Cornell, I built a responsive theme for our base Drupal distribution. It uses jQuery for DOM manipulation and was built using Sass to modualrize the styles. I wrote with the design team in mind- they will be building various sites based off this theme, and they have a theme file that includes the relevant styles that they can override easily, along with a set of color variables to make their jobs easier.</p>
+			<p>While working at Weill Cornell, I built a responsive theme for our base Drupal distribution. It uses jQuery for DOM manipulation and was built using Sass to modualrize the styles. I wrote with the design team in mind- they will be building various sites based off this theme, and they have a theme file that includes the relevant styles that they can override easily, along with a set of color variables to make their jobs easier. One of the most interesting parts of this was the navigation, and making it functional across screen sizes.</p>
 			<div>The theme has been applied to <a target="_blank" href="http://cornellradiationoncology.org">Radation Oncology</a>, <a target="_blank" href="http://weillcornellpainmedicine.com">Pain Medicine</a>, and <a href="http://weillcornellanesthesiology.org" target="_blank">Anesthesiology</div>
 			<div>
 				<a target="_blank" href="https://bitbucket.org/alanmoo/wcmc-base-theme">Source</a>
