--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
              </div>
              <h1>I'm Alan Mooiman</h1><p>A front end developer in NYC.</p>
            <ul class="services">
+               <li><a href="http://blog.alanmooiman.com/" class="blog">Blog</a>
                <li><a href="resume/" class="resume">Resume</a>
                <li><a class="twitter" href="http://twitter.com/alanmoo">Twitter</a>
                <li><a class="github" href="http://github.com/alanmoo">GitHub</a>
-               <li><a class="linkedin" href="http://linkedin.com/in/amooiman">LinkedIn</a>
+               <!-- <li><a class="linkedin" href="http://linkedin.com/in/amooiman">LinkedIn</a> -->
            </ul>    
        </div>
 
