--- a/resume/index.html
+++ b/resume/index.html
@@ -22,18 +22,16 @@
 			<h3>Skills/Approaches</h3>
 			<ul class="skills">
 				<li>Front end skill set: HTML5, CSS, Javascript</li>
-				<li>Modern workflow: Grunt, Bower, Yeoman</li>
-				<li>AngularJS</li>
-				<li>Drupal theming/templating</li>
+				<li>Modern workflow: Grunt, Bower, Yeoman, Sass</li>
+				<li>AngularJS and the MEAN stack</li>
 				<li>Mobile first, responsive web development</li>
-				<li>Sass preprocessing</li>
 				<li>Interaction Design</li>
-				<li>Focus on building sites using code instead of images wherever possible</li>
-				<li>Familiarity with PHP, especially debugging/modifying existing code</li>
-				<li>Templating in Symfony/Twig</li>
+				<li>Drupal theming/templating</li>
+				<li>Basic PHP</li>
+				<li>Comfortable with Objective C, Swift, and Cocoa</li>
 				<li>Firm believer in progressive enhancement and building modular code</li>
-				<li>Some experience with D3.js</li>
-				<li><!--Trollin' recruiters--><a href="http://html9responsiveboilerstrapjs.com" style="text-decoration: none">HTML6 ready</a></li>
+				<li>Familiar with D3.js</li>
+				<li><!--Trollin'--><a href="http://html9responsiveboilerstrapjs.com">HTML6 ready</a></li>
 			</ul>
 			<h2>Work Experience</h2>
 			<div class="resume_item">
@@ -45,6 +43,7 @@
 					<li>Experiment with new web technologies to implement within the application</li>
 					<li>Coordinate with the development team in California so that our prototypes are useful to them during production</li>
 					<li>Develop framework of various components to be integrated into a style guide for agencies and developers to reference.</li>
+					<li>Collaborate with the iOS development and design teams to quickly integrate new technologies</li>
 				</ul>
 			</div>
 			<div class="resume_item">
@@ -81,7 +80,7 @@
 					<li>Troubleshot, diagnosed, and repaired customer iPods and iPhones at Genius Bar</li>
 				</ul>
 			</div>
-			<div class="resume_item">
+<!-- 			<div class="resume_item">
 				<h3 class="job_title">Design Intern</h3>
 				<div class="organization">Longtail Video - <span class="location">New York City</span></div>
 				<div class="organization_dates">Summer 2009</div>
@@ -89,7 +88,7 @@
 					<li>Unified CSS for a set of web pages to reduce amount of files needed</li>
 					<li>Hand coded HTML e-mail blasts</li>
 				</ul>
-			</div>
+			</div> -->
 			<h2>Education</h2>
 			<div class="resume_item">
 				<div class="organization">
