--- a/resume/index.html
+++ b/resume/index.html
@@ -7,6 +7,7 @@
 		<title>Alan Mooiman's Resume</title>
 	</head>
 	<body>
+		<div class="show-print"><small>Printed/PDF'ed from <a href="http://alanmooiman.com/resume">alanmooiman.com/resume</a></small></div>
 		<div class="name_title">
 			<h1>Alan Mooiman</h1>
 			<h2>Front End Web Developer</h2>
@@ -19,19 +20,19 @@
 		<div class="content">
 			<h3>Objective</h3>
 			<p>To build semantic, responsive, and fast web sites and applications using modern web technologies, and to be proud of what I create.</p>
-			<h3>Skills/Approaches</h3>
+			<h3>Skills/Experience</h3>
 			<ul class="skills">
-				<li>Front end skill set: HTML5, CSS, Javascript</li>
-				<li>Modern workflow: Grunt, Bower, Yeoman, Sass</li>
-				<li>AngularJS and the MEAN stack</li>
-				<li>Mobile first, responsive web development</li>
+				<li><em>Firm believer in progressive enhancement and building modular code</em></li>
+				<li><em>Strong front end skill set: HTML5, CSS, Javascript</em></li>
+				<li><em>Modern workflow: Grunt, Bower, Yeoman, Sass</em></li>
+				<li><em>AngularJS and the MEAN stack</em></li>
+				<li><em>Mobile first, responsive web development</em></li>
 				<li>Interaction Design</li>
-				<li>Drupal theming/templating</li>
 				<li>Basic PHP</li>
-				<li>Comfortable with Objective C, Swift, and Cocoa</li>
-				<li>Firm believer in progressive enhancement and building modular code</li>
-				<li>Familiar with D3.js</li>
-				<li><!--Trollin'--><a href="http://html9responsiveboilerstrapjs.com">HTML6 ready</a></li>
+				<li>Objective C, Swift, and Cocoa</li>
+				<li>D3.js</li>
+				<li>Drupal theming/templating</li>
+				<li class="hide-print"><!--Trollin'--><a href="http://html9responsiveboilerstrapjs.com">HTML6 ready</a></li>
 			</ul>
 			<h2>Work Experience</h2>
 			<div class="resume_item">
