Updates with references and projects

--- a/resume/index.html
+++ b/resume/index.html
@@ -8,11 +8,11 @@
 	</head>
 	<body>
 		<div class="show-print"><small>Printed/PDF'ed from <a href="http://alanmooiman.com/resume">alanmooiman.com/resume</a></small></div>
-		<div class="name_title">
+		<header>
 			<h1>Alan Mooiman</h1>
 			<h2>Front End Web Developer</h2>
 
-		</div> <!-- .name_title -->
+		</header> <!-- .name_title -->
 		<div class="contact_info">
 			<!--<span class="phone">908-867-8677</span>--><!--If you know enough to look in comments, you can have my phone number. But I'm tired of recruiter agency calls. That's my Google Voice number.-->
 			<a class="email" href="mailto:alan@alanmooiman.com?subject=I want to pay you">alan@alanmooiman.com</a>
@@ -20,21 +20,50 @@
 		<div class="content">
 			<h3>Objective</h3>
 			<p>To build semantic, responsive, and fast web sites and applications using modern web technologies, and to be proud of what I create.</p>
-			<h3>Skills/Experience</h3>
-			<ul class="skills">
-				<li><em>Firm believer in progressive enhancement and building modular code</em></li>
-				<li><em>Strong front end skill set: HTML5, CSS, Javascript</em></li>
-				<li><em>Modern workflow: Grunt, Bower, Yeoman, Sass</em></li>
-				<li><em>AngularJS and the MEAN stack</em></li>
-				<li><em>Mobile first, responsive web development</em></li>
-				<li>Interaction Design</li>
-				<li>Basic PHP</li>
-				<li>Objective C, Swift, and Cocoa</li>
-				<li>D3.js</li>
-				<li>Drupal theming/templating</li>
-				<li class="hide-print"><!--Trollin'--><a href="http://html9responsiveboilerstrapjs.com">HTML6 ready</a></li>
-			</ul>
+			<section>
+				<h3>Skills/Experience</h3>
+				<ul class="skills">
+					<li><em>Firm believer in progressive enhancement and building modular code</em></li>
+					<li><em>Strong front end skill set: HTML5, CSS, Javascript</em></li>
+					<li><em>Modern workflow: Grunt, Bower, Yeoman, Sass</em></li>
+					<li><em>AngularJS and the MEAN stack</em></li>
+					<li><em>Mobile first, responsive web development</em></li>
+					<li>Interaction Design</li>
+					<li>Basic PHP</li>
+					<li>Objective C, Swift, and Cocoa</li>
+					<li>D3.js</li>
+					<li class="hide-print"><!--Trollin'--><a href="http://html9responsiveboilerstrapjs.com">HTML6 ready</a></li>
+				</ul>
+			</section>
+			<section>
+				<h2>Significant Projects</h2>
+				<h3>E*Trade Portfolios Prototype</h3>
+				<ul>
+					<li>Leveraged MongoDB, Express, NodeJS, and AngularJS to build a highly functional prototype for the new heart of the E*TRADE web platform</li>
+					<li>Worked in conjunction with teammate building trade ticket to create fully functional experience for user testing</li>
+					<li>Used Express and Node to design and RESTful API that could be utilized by AngularJS client side framework</li>
+					<li>Construct back end that integrates data from MongoDB and E*TRADE APIs to generate API responses</li>
+				</ul>
+				<h3>E*Trade CSS Framework</h3>
+				<ul>
+					<li>Created custom CSS Framework based off Bootstrap to be used across the company and with 3rd party vendors</li>
+					<li>Enhanced Bootstrap grid adding functionality tailored to the needs of a financial web app</li>
+					<li>Carefully modified components and extended their functionality while minimizing code bloat</li>
+					<li>Led development team to begin using this framework as a way of vastly reducing development time</li>
+				</ul>
+			</section>
+			<section>
 			<h2>Work Experience</h2>
+			<div class="resume_item">
+				<h3 class="job_title">Front End Developer</h3>
+				<div class="organization"> jobsuitors.com</div>
+				<div class="organization_dates">January 2015 - Present</div>
+				<ul>
+					<li>Work with CTO to make front end development decisions</li>
+					<li>Enhance Ruby on Rails based project's front end to bring it to MVP status</li>
+					<li>Reduce CSS complexity so that project's styles are modular</li>
+				</ul>
+			</div>
 			<div class="resume_item">
 				<h3 class="job_title">Front End Prototype Developer</h3>
 				<div class="organization">E*TRADE Financial - <span class="location">New York City</span></div>
@@ -90,6 +119,7 @@
 					<li>Hand coded HTML e-mail blasts</li>
 				</ul>
 			</div> -->
+			</section>
 			<h2>Education</h2>
 			<div class="resume_item">
 				<div class="organization">
@@ -114,7 +144,10 @@
 
 			<h2>References</h2>
 			<ul>
-				<li>Available upon <a href="mailto:alan@alanmooiman.com?subject=References?">request</a></li>
+				<li><a href="https://www.linkedin.com/profile/view?id=1340266">Arnaud Jammaers</a>, Creative Director, E*Trade Financial</li>
+				<li><a href="https://www.linkedin.com/profile/view?id=28458086">Mark Mitchell</a>, Senior Manager, E*Trade Financial</li>
+				<li><a href="https://www.linkedin.com/profile/view?id=2793169">Dan Dickinson</a>, Associate Director of Web Communications, Weill Cornell Medical College</li>
+				<!-- <li>Contact information available upon <a href="mailto:alan@alanmooiman.com?subject=References?">request</a></li> -->
 			</ul>
 		</div> <!-- .content -->
 <script type="text/javascript">
