--- a/resume/index.html
+++ b/resume/index.html
@@ -56,18 +56,16 @@
 			<h2>Work Experience</h2>
 			<div class="resume_item">
 				<h3 class="job_title">Front End Developer</h3>
-				<div class="organization"> jobsuitors.com</div>
-				<div class="organization_dates">January 2015 - Present</div>
+				<div class="organization"><a href="https://www.mozilla.org/en-US/foundation/">Mozilla Foundation</a></div>
+				<div class="organization_dates">September 2015 - Present</div>
 				<ul>
-					<li>Work with CTO to make front end development decisions</li>
-					<li>Enhance Ruby on Rails based project's front end to bring it to MVP status</li>
-					<li>Reduce CSS complexity so that project's styles are modular</li>
+					<li>Work on <a href="http://webmaker.org">Webmaker</a></li>
 				</ul>
 			</div>
 			<div class="resume_item">
 				<h3 class="job_title">Front End Prototype Developer</h3>
 				<div class="organization">E*TRADE Financial - <span class="location">New York City</span></div>
-				<div class="organization_dates">October 2013 - Present</div>
+				<div class="organization_dates">October 2013 - August 2015</div>
 				<ul>
 					<li>Develop prototypes for the customer webapp based on static comps</li>
 					<li>Experiment with new web technologies to implement within the application</li>
