A little more, for good measure

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 </head>
 <body style="text-align: center;">
 	<h1 style="margin: 1.5rem;">Oh crap.</h1>
-	<h2 style="margin: 1.5rem;">You broke something.</h2>
+	<h2 style="margin: 1.5rem;">Something went wrong.</h2>
 	<a style="font-size: 2em; text-decoration: underline" href="/">Try again?</a>
 </body>
 </html>
