--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="avatar_wrap">
              <img src="img/gravatar.jpeg" alt="Picture of Alan" class="avatar">
              </div>
-             <h1>I'm Alan Mooiman</h1><p>A front end developer in NYC.</p>
+             <h1>I'm Alan Mooiman</h1><p>A (nomadic) front end developer at the Mozilla Foundation.</p>
            <ul class="services">
                <li><a href="http://blog.alanmooiman.com/" class="blog">Blog</a>
                <li><a href="resume/" class="resume">Resume</a>
