--- a/resume/index.html
+++ b/resume/index.html
@@ -14,25 +14,23 @@
 
 		</header> <!-- .name_title -->
 		<div class="contact_info">
-			<!--<span class="phone">908-867-8677</span>--><!--If you know enough to look in comments, you can have my phone number. But I'm tired of recruiter agency calls. That's my Google Voice number.-->
 			<a class="email" href="mailto:alan@alanmooiman.com?subject=I want to pay you">alan@alanmooiman.com</a>
 		</div> <!-- .contact_info -->
 		<div class="content">
 			<h3>Objective</h3>
-			<p>To build semantic, responsive, and fast web sites and applications using modern web technologies, and to be proud of what I create.</p>
+			<p>To lead an engaged, productive, communicative team that outputs high quality projects and works together to help one another improve their skills.</p>
 			<section>
 				<h3>Skills/Experience</h3>
 				<ul class="skills">
+					<li>Intra-organizational communication</li>
+					<li>Problem solving, not symptom-addressing</li>
+					<li>Empathic communicator</li>
+					<li>Comfortable playing many roles</li>
+					<li>Strongest technically in front end web development</li>
+					<li>Comfortable with Django/Python</li>
+					<li>Familiar with Mac/iOS development</li>
 					<li><em>Firm believer in progressive enhancement and building modular code</em></li>
-					<li><em>Strong front end skill set: HTML5, CSS, Javascript</em></li>
-					<li><em>Modern workflow: Grunt, Bower, Yeoman, Sass</em></li>
-					<li><em>AngularJS and the MEAN stack</em></li>
-					<li><em>Mobile first, responsive web development</em></li>
-					<li>Interaction Design</li>
-					<li>Basic PHP</li>
-					<li>Objective C, Swift, and Cocoa</li>
-					<li>D3.js</li>
-					<li class="hide-print"><!--Trollin'--><a href="http://html9responsiveboilerstrapjs.com">HTML6 ready</a></li>
+					<li>Design background</li>
 				</ul>
 			</section>
 			<section>
@@ -55,12 +53,20 @@
 			<section>
 			<h2>Work Experience</h2>
 			<div class="resume_item">
+				<h3 class="job_title">Engineering Manager</h3>
+				<div class="organization"><a href="https://foundation.mozilla.org">Mozilla Foundation</a></div>
+				<div class="organization_dates">May 2017 - Present</div>
+				<p>
+					I lead a team of 6 (+ 1 indirect report) engineers across North America and Germany. We build projects to support Mozilla's mission of improving internet health through shaping the global conversation, connecting leaders, and rallying citizens. For this, I work closely with the design manager and digital director to improve the Foundation's main site at foundation.mozilla.org. The design and engineering teams also function as a service organization internally, helping address the digital needs of other teams within the organization. I work closely with the leaders of those teams to identify the best way for us to address their needs while pushing forward on our team's internal roadmap. This happens by asking not just "what are you trying to do?" but "what problem are you trying to solve?", a subtle but important distinction. I also work with my team to identify the most challenging process points and figure out how to reduce friction for them, while keeping us moving forward.
+				</p>
+			</div>
+			<div class="resume_item">
 				<h3 class="job_title">Front End Developer</h3>
-				<div class="organization"><a href="https://www.mozilla.org/en-US/foundation/">Mozilla Foundation</a></div>
-				<div class="organization_dates">September 2015 - Present</div>
-				<ul>
-					<li>Work on <a href="http://webmaker.org">Webmaker</a></li>
-				</ul>
+				<div class="organization"><a href="https://foundation.mozilla.org">Mozilla Foundation</a></div>
+				<div class="organization_dates">September 2015 - May 2017</div>
+				<p>
+					Upon joining the team, I started working on the existing Webmaker Android app, a web-based app in a native wrapper that existed to empower users to create content on the web, instead of just consuming it. I also helped to create a UI framework for use across our web properties, and built out/enhanced a number of other sites like science.mozilla.org, foundation.mozilla.org, and the initial back-end work for mozillapulse.org as I learned Django.
+				</p>
 			</div>
 			<div class="resume_item">
 				<h3 class="job_title">Front End Prototype Developer</h3>
