Update linkedin references

--- a/resume/index.html
+++ b/resume/index.html
@@ -147,9 +147,9 @@
 
 			<h2>References</h2>
 			<ul>
-				<li><a href="https://www.linkedin.com/profile/view?id=1340266">Arnaud Jammaers</a>, Creative Director, E*Trade Financial</li>
-				<li><a href="https://www.linkedin.com/profile/view?id=28458086">Mark Mitchell</a>, Senior Manager, E*Trade Financial</li>
-				<li><a href="https://www.linkedin.com/profile/view?id=2793169">Dan Dickinson</a>, Associate Director of Web Communications, Weill Cornell Medical College</li>
+				<li><a href="https://www.linkedin.com/in/simonwex/">Simon Wex</a>Former Director of Software, Mozilla Foundation</li>
+				<li><a href="https://www.linkedin.com/in/arnaud-jammaers-74a547/">Arnaud Jammaers</a>, Creative Director, E*Trade Financial (now at MasterCard)</li>
+				<li><a href="https://www.linkedin.com/in/remydwd/">Dan Dickinson</a>, Associate Director of Web Communications, Weill Cornell Medical College</li>
 				<!-- <li>Contact information available upon <a href="mailto:alan@alanmooiman.com?subject=References?">request</a></li> -->
 			</ul>
 		</div> <!-- .content -->
@@ -167,7 +167,7 @@
 
 </script>
 <script>
-console.log("Well, Hello. If you've found this and would like to give me a call, check the comments on this page. Just keep in mind I'm probably not looking for a full time gig. But if you're working on something awseome that I could moonlight on, get in touch. E-mail is probably best, though.");
+console.log("¯\_(ツ)_/¯");
 </script>
 	</body>
 </html>
