Another typo fix

--- a/resume/index.html
+++ b/resume/index.html
@@ -147,7 +147,7 @@
 
 			<h2>References</h2>
 			<ul>
-				<li><a href="https://www.linkedin.com/in/simonwex/">Simon Wex</a>Former Director of Software, Mozilla Foundation</li>
+				<li><a href="https://www.linkedin.com/in/simonwex/">Simon Wex</a>, Former Director of Software, Mozilla Foundation</li>
 				<li><a href="https://www.linkedin.com/in/arnaud-jammaers-74a547/">Arnaud Jammaers</a>, Creative Director, E*Trade Financial (now at Mastercard)</li>
 				<li><a href="https://www.linkedin.com/in/remydwd/">Dan Dickinson</a>, Associate Director of Web Communications, Weill Cornell Medical College</li>
 				<!-- <li>Contact information available upon <a href="mailto:alan@alanmooiman.com?subject=References?">request</a></li> -->
