Update title. Oops.
This is what I get for editing on the server.

--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,7 @@
 		<div class="show-print"><small>Printed/PDF'ed from <a href="http://alanmooiman.com/resume">alanmooiman.com/resume</a></small></div>
 		<header>
 			<h1>Alan Mooiman</h1>
-			<h2>Front End Web Developer</h2>
+			<h2>Web Development Manager</h2>
 
 		</header> <!-- .name_title -->
 		<div class="contact_info">
