Support indieauth, update homepage a bit

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <!-- Add your site or application content here -->
        <div class="container">
           <div class="avatar_wrap">
-             <img src="img/gravatar.jpeg" alt="Picture of Alan" class="avatar">
+             <img src="img/gravatar.jpg" alt="Picture of Alan" class="avatar">
              </div>
-             <h1>I'm Alan Mooiman</h1><p>A (nomadic) front end developer at the Mozilla Foundation.</p>
+             <h1>Alan Mooiman</h1><p>Engineering Manager at the Mozilla Foundation.</p>
            <ul class="services">
                <li><a href="http://blog.alanmooiman.com/" class="blog">Blog</a>
                <li><a href="resume/" class="resume">Resume</a>
-               <li><a class="twitter" href="http://twitter.com/alanmoo">Twitter</a>
-               <li><a class="github" href="http://github.com/alanmoo">GitHub</a>
+               <li><a class="twitter" href="https://twitter.com/alanmoo" rel="me">Twitter</a>
+               <li><a class="github" href="https://github.com/alanmoo" rel="me">GitHub</a>
                <!-- <li><a class="linkedin" href="http://linkedin.com/in/amooiman">LinkedIn</a> -->
            </ul>    
        </div>
