--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
              </div>
              <h1>Alan Mooiman</h1><p>Engineering Manager at the Mozilla Foundation.</p>
            <ul class="services">
-               <li><a href="http://blog.alanmooiman.com/" class="blog">Blog</a>
-               <li><a href="resume/" class="resume">Resume</a>
+               <li><a href="http://blog.alanmooiman.com" class="blog">Blog</a>
+               <li><a href="/resume" class="resume">Resume</a>
                <li><a class="twitter" href="https://twitter.com/alanmoo" rel="me">Twitter</a>
                <li><a class="github" href="https://github.com/alanmoo" rel="me">GitHub</a>
                <!-- <li><a class="linkedin" href="http://linkedin.com/in/amooiman">LinkedIn</a> -->
